--- a/Ourapp/app/base/templates/login/login.html
+++ b/Ourapp/app/base/templates/login/login.html
@@ -8,7 +8,7 @@
 
 <div class="login-box">
     <div class="login-logo">
-        <a href="/"><b>Admin</b>LTE</a>
+        <a href="/"><b>BulliesEye</b>LTE</a>
     </div>
 
     <!-- /.login-logo -->
