--- a/Ourapp/app/base/templates/login/register.html
+++ b/Ourapp/app/base/templates/login/register.html
@@ -9,7 +9,7 @@
 <div class="register-box">
 
     <div class="register-logo">
-        <a href="/"><b>Admin</b>LTE</a>
+        <a href="/"><b>BulliesEye</b>LTE</a>
     </div>
 
     <div class="register-box-body">
