--- a/Ourapp/app/home/templates/index2.html
+++ b/Ourapp/app/home/templates/index2.html
@@ -117,93 +117,12 @@
                   <!-- /.chart-responsive -->
                 </div>
                 <!-- /.col -->
-                <div class="col-md-4">
-                  <p class="text-center">
-                    <strong>Goal Completion</strong>
-                  </p>
 
-                  <div class="progress-group">
-                    <span class="progress-text">Add Products to Cart</span>
-                    <span class="progress-number"><b>160</b>/200</span>
-
-                    <div class="progress sm">
-                      <div class="progress-bar progress-bar-aqua" style="width: 80%"></div>
-                    </div>
-                  </div>
-                  <!-- /.progress-group -->
-                  <div class="progress-group">
-                    <span class="progress-text">Complete Purchase</span>
-                    <span class="progress-number"><b>310</b>/400</span>
-
-                    <div class="progress sm">
-                      <div class="progress-bar progress-bar-red" style="width: 80%"></div>
-                    </div>
-                  </div>
-                  <!-- /.progress-group -->
-                  <div class="progress-group">
-                    <span class="progress-text">Visit Premium Page</span>
-                    <span class="progress-number"><b>480</b>/800</span>
-
-                    <div class="progress sm">
-                      <div class="progress-bar progress-bar-green" style="width: 80%"></div>
-                    </div>
-                  </div>
-                  <!-- /.progress-group -->
-                  <div class="progress-group">
-                    <span class="progress-text">Send Inquiries</span>
-                    <span class="progress-number"><b>250</b>/500</span>
-
-                    <div class="progress sm">
-                      <div class="progress-bar progress-bar-yellow" style="width: 80%"></div>
-                    </div>
-                  </div>
-                  <!-- /.progress-group -->
-                </div>
                 <!-- /.col -->
               </div>
               <!-- /.row -->
             </div>
             <!-- ./box-body -->
-            <div class="box-footer">
-              <div class="row">
-                <div class="col-sm-3 col-xs-6">
-                  <div class="description-block border-right">
-                    <span class="description-percentage text-green"><i class="fa fa-caret-up"></i> 17%</span>
-                    <h5 class="description-header">$35,210.43</h5>
-                    <span class="description-text">TOTAL REVENUE</span>
-                  </div>
-                  <!-- /.description-block -->
-                </div>
-                <!-- /.col -->
-                <div class="col-sm-3 col-xs-6">
-                  <div class="description-block border-right">
-                    <span class="description-percentage text-yellow"><i class="fa fa-caret-left"></i> 0%</span>
-                    <h5 class="description-header">$10,390.90</h5>
-                    <span class="description-text">TOTAL COST</span>
-                  </div>
-                  <!-- /.description-block -->
-                </div>
-                <!-- /.col -->
-                <div class="col-sm-3 col-xs-6">
-                  <div class="description-block border-right">
-                    <span class="description-percentage text-green"><i class="fa fa-caret-up"></i> 20%</span>
-                    <h5 class="description-header">$24,813.53</h5>
-                    <span class="description-text">TOTAL PROFIT</span>
-                  </div>
-                  <!-- /.description-block -->
-                </div>
-                <!-- /.col -->
-                <div class="col-sm-3 col-xs-6">
-                  <div class="description-block">
-                    <span class="description-percentage text-red"><i class="fa fa-caret-down"></i> 18%</span>
-                    <h5 class="description-header">1200</h5>
-                    <span class="description-text">GOAL COMPLETIONS</span>
-                  </div>
-                  <!-- /.description-block -->
-                </div>
-              </div>
-              <!-- /.row -->
-            </div>
             <!-- /.box-footer -->
           </div>
           <!-- /.box -->
@@ -330,7 +249,7 @@
                       <img class="direct-chat-img" src="/static/assets/img/user1-128x128.jpg" alt="message user image">
                       <!-- /.direct-chat-img -->
                       <div class="direct-chat-text">
-                        Working with AdminLTE on a great new app! Wanna join?
+                        Working with BulliesEye on a great new app! Wanna join?
                       </div>
                       <!-- /.direct-chat-text -->
                     </div>
@@ -644,7 +563,7 @@
             <span class="info-box-icon"><i class="ion ion-ios-pricetag-outline"></i></span>
 
             <div class="info-box-content">
-              <span class="info-box-text">Inventory</span>
+              <span class="info-box-text">Misclassified messages</span>
               <span class="info-box-number">5,200</span>
 
               <div class="progress">
@@ -661,7 +580,7 @@
             <span class="info-box-icon"><i class="ion ion-ios-heart-outline"></i></span>
 
             <div class="info-box-content">
-              <span class="info-box-text">Mentions</span>
+              <span class="info-box-text">Participants</span>
               <span class="info-box-number">92,050</span>
 
               <div class="progress">
@@ -678,7 +597,7 @@
             <span class="info-box-icon"><i class="ion ion-ios-cloud-download-outline"></i></span>
 
             <div class="info-box-content">
-              <span class="info-box-text">Downloads</span>
+              <span class="info-box-text">Messages</span>
               <span class="info-box-number">114,381</span>
 
               <div class="progress">
@@ -695,7 +614,7 @@
             <span class="info-box-icon"><i class="ion-ios-chatbubble-outline"></i></span>
 
             <div class="info-box-content">
-              <span class="info-box-text">Direct Messages</span>
+              <span class="info-box-text">Bullying incidents</span>
               <span class="info-box-number">163,921</span>
 
               <div class="progress">
@@ -711,7 +630,7 @@
 
           <div class="box box-default">
             <div class="box-header with-border">
-              <h3 class="box-title">Browser Usage</h3>
+              <h3 class="box-title">Websites</h3>
 
               <div class="box-tools pull-right">
                 <button type="button" class="btn btn-box-tool" data-widget="collapse"><i class="fa fa-minus"></i>
@@ -731,12 +650,12 @@
                 <!-- /.col -->
                 <div class="col-md-4">
                   <ul class="chart-legend clearfix">
-                    <li><i class="fa fa-circle-o text-red"></i> Chrome</li>
-                    <li><i class="fa fa-circle-o text-green"></i> IE</li>
-                    <li><i class="fa fa-circle-o text-yellow"></i> FireFox</li>
-                    <li><i class="fa fa-circle-o text-aqua"></i> Safari</li>
-                    <li><i class="fa fa-circle-o text-light-blue"></i> Opera</li>
-                    <li><i class="fa fa-circle-o text-gray"></i> Navigator</li>
+                    <li><i class="fa fa-circle-o text-red"></i> Facebook</li>
+                    <li><i class="fa fa-circle-o text-green"></i> Instagram</li>
+                    <li><i class="fa fa-circle-o text-yellow"></i> Twitter</li>
+                    <li><i class="fa fa-circle-o text-aqua"></i> LinkedIn</li>
+                    <li><i class="fa fa-circle-o text-light-blue"></i> Reddit</li>
+                    <li><i class="fa fa-circle-o text-gray"></i> Quora</li>
                   </ul>
                 </div>
                 <!-- /.col -->
@@ -746,11 +665,11 @@
             <!-- /.box-body -->
             <div class="box-footer no-padding">
               <ul class="nav nav-pills nav-stacked">
-                <li><a href="#">United States of America
+                <li><a href="#">Facebook
                   <span class="pull-right text-red"><i class="fa fa-angle-down"></i> 12%</span></a></li>
-                <li><a href="#">India <span class="pull-right text-green"><i class="fa fa-angle-up"></i> 4%</span></a>
+                <li><a href="#">Instagram <span class="pull-right text-green"><i class="fa fa-angle-up"></i> 4%</span></a>
                 </li>
-                <li><a href="#">China
+                <li><a href="#">Twitter
                   <span class="pull-right text-yellow"><i class="fa fa-angle-left"></i> 0%</span></a></li>
               </ul>
             </div>
@@ -761,7 +680,7 @@
           <!-- PRODUCT LIST -->
           <div class="box box-primary">
             <div class="box-header with-border">
-              <h3 class="box-title">Recently Added Products</h3>
+              <h3 class="box-title">Recent Bullying Incidents</h3>
 
               <div class="box-tools pull-right">
                 <button type="button" class="btn btn-box-tool" data-widget="collapse"><i class="fa fa-minus"></i>
@@ -777,49 +696,70 @@
                     <img src="/static/assets/img/default-50x50.gif" alt="Product Image">
                   </div>
                   <div class="product-info">
-                    <a href="javascript:void(0)" class="product-title">Samsung TV
-                      <span class="label label-warning pull-right">$1800</span></a>
+                    <a href="javascript:void(0)" class="product-title">Username: kunal2
+                      <span class="label label-warning pull-right">24th July 2019</span></a>
                     <span class="product-description">
-                          Samsung 32" 1080p 60Hz LED Smart HDTV.
+                          Comment: I'm bullying you right now!!! xP
                         </span>
                   </div>
                 </li>
-                <!-- /.item -->
                 <li class="item">
                   <div class="product-img">
                     <img src="/static/assets/img/default-50x50.gif" alt="Product Image">
                   </div>
                   <div class="product-info">
-                    <a href="javascript:void(0)" class="product-title">Bicycle
-                      <span class="label label-info pull-right">$700</span></a>
+                    <a href="javascript:void(0)" class="product-title">Username: kunal2
+                      <span class="label label-info pull-right">24th July 2019</span></a>
                     <span class="product-description">
-                          26" Mongoose Dolomite Men's 7-speed, Navy Blue.
+                          Comment: I'm bullying you right now!!! xP
                         </span>
                   </div>
                 </li>
-                <!-- /.item -->
                 <li class="item">
                   <div class="product-img">
                     <img src="/static/assets/img/default-50x50.gif" alt="Product Image">
                   </div>
                   <div class="product-info">
-                    <a href="javascript:void(0)" class="product-title">Xbox One <span
-                        class="label label-danger pull-right">$350</span></a>
+                    <a href="javascript:void(0)" class="product-title">Username: kunal2
+                      <span class="label label-success pull-right">24th July 2019</span></a>
                     <span class="product-description">
-                          Xbox One Console Bundle with Halo Master Chief Collection.
+                          Comment: I'm bullying you right now!!! xP
                         </span>
                   </div>
                 </li>
-                <!-- /.item -->
                 <li class="item">
                   <div class="product-img">
                     <img src="/static/assets/img/default-50x50.gif" alt="Product Image">
                   </div>
                   <div class="product-info">
-                    <a href="javascript:void(0)" class="product-title">PlayStation 4
-                      <span class="label label-success pull-right">$399</span></a>
+                    <a href="javascript:void(0)" class="product-title">Username: kunal2
+                      <span class="label label-danger pull-right">24th July 2019</span></a>
                     <span class="product-description">
-                          PlayStation 4 500GB Console (PS4)
+                          Comment: I'm bullying you right now!!! xP
+                        </span>
+                  </div>
+                </li>
+                <li class="item">
+                  <div class="product-img">
+                    <img src="/static/assets/img/default-50x50.gif" alt="Product Image">
+                  </div>
+                  <div class="product-info">
+                    <a href="javascript:void(0)" class="product-title">Username: kunal2
+                      <span class="label label-default pull-right">24th July 2019</span></a>
+                    <span class="product-description">
+                          Comment: I'm bullying you right now!!! xP
+                        </span>
+                  </div>
+                </li>
+                <li class="item">
+                  <div class="product-img">
+                    <img src="/static/assets/img/default-50x50.gif" alt="Product Image">
+                  </div>
+                  <div class="product-info">
+                    <a href="javascript:void(0)" class="product-title">Username: kunal2
+                      <span class="label label-primary pull-right">24th July 2019</span></a>
+                    <span class="product-description">
+                          Comment: I'm bullying you right now!!! xP
                         </span>
                   </div>
                 </li>
@@ -828,7 +768,7 @@
             </div>
             <!-- /.box-body -->
             <div class="box-footer text-center">
-              <a href="javascript:void(0)" class="uppercase">View All Products</a>
+              <a href="javascript:void(0)" class="uppercase">View All Cyberbullying incidents</a>
             </div>
             <!-- /.box-footer -->
           </div>
@@ -847,10 +787,10 @@
     <!-- ChartJS -->
     <script src="/static/assets/js/chart.js"></script>
 
-    <!-- AdminLTE dashboard demo (This is only for demo purposes) -->
+    <!-- BulliesEye dashboard demo (This is only for demo purposes) -->
     <script src="/static/assets/js/pages/dashboard2.js"></script>
-    
-    <!-- AdminLTE for demo purposes -->
+
+    <!-- BulliesEye for demo purposes -->
     <script src="/static/assets/js/demo.js"></script>
 
 {% endblock %}
