--- a/Ourapp/app/home/templates/page-lockscreen.html
+++ b/Ourapp/app/home/templates/page-lockscreen.html
@@ -10,7 +10,7 @@
 <div class="lockscreen-wrapper">
 
   <div class="lockscreen-logo">
-    <a href="/index2.html"><b>Admin</b>LTE</a>
+    <a href="/index2.html"><b>BulliesEye</b>LTE</a>
   </div>
   <!-- User name -->
   <div class="lockscreen-name">John Doe</div>
