Added more frontend

--- a/Ourapp/app/home/templates/index2.html
+++ b/Ourapp/app/home/templates/index2.html
@@ -19,14 +19,14 @@
     <!-- Main content -->
     <section class="content">
       <!-- Info boxes -->
-      <div class="row">
+      <div class="row" style="display:block;">
         <div class="col-md-3 col-sm-6 col-xs-12">
           <div class="info-box">
-            <span class="info-box-icon bg-aqua"><i class="ion ion-ios-gear-outline"></i></span>
-
+            <!-- <span class="info-box-icon bg-aqua"><i class="ion ion-ios-gear-outline"></i></span> -->
+            <span class="info-box-icon bg-aqua"><i class="ion-ios-chatbubble-outline"></i></span>
             <div class="info-box-content">
-              <span class="info-box-text">CPU Traffic</span>
-              <span class="info-box-number">90<small>%</small></span>
+              <span class="info-box-text">Misclassified messages</span>
+              <span class="info-box-number">5200</span>
             </div>
             <!-- /.info-box-content -->
           </div>
@@ -38,8 +38,8 @@
             <span class="info-box-icon bg-red"><i class="fa fa-google-plus"></i></span>
 
             <div class="info-box-content">
-              <span class="info-box-text">Likes</span>
-              <span class="info-box-number">41,410</span>
+              <span class="info-box-text">Participants</span>
+              <span class="info-box-number">92,050</span>
             </div>
             <!-- /.info-box-content -->
           </div>
@@ -55,8 +55,8 @@
             <span class="info-box-icon bg-green"><i class="ion ion-ios-cart-outline"></i></span>
 
             <div class="info-box-content">
-              <span class="info-box-text">Sales</span>
-              <span class="info-box-number">760</span>
+              <span class="info-box-text">Messages</span>
+              <span class="info-box-number">114,381</span>
             </div>
             <!-- /.info-box-content -->
           </div>
@@ -68,8 +68,8 @@
             <span class="info-box-icon bg-yellow"><i class="ion ion-ios-people-outline"></i></span>
 
             <div class="info-box-content">
-              <span class="info-box-text">New Members</span>
-              <span class="info-box-number">2,000</span>
+              <span class="info-box-text">Bullying Incidents</span>
+              <span class="info-box-number">163,921</span>
             </div>
             <!-- /.info-box-content -->
           </div>
@@ -138,7 +138,7 @@
           <!-- MAP & BOX PANE -->
           <div class="box box-success">
             <div class="box-header with-border">
-              <h3 class="box-title">Visitors Report</h3>
+              <h3 class="box-title">Cases of bullying</h3>
 
               <div class="box-tools pull-right">
                 <button type="button" class="btn btn-box-tool" data-widget="collapse"><i class="fa fa-minus"></i>
@@ -158,7 +158,7 @@
                 <!-- /.col -->
                 <div class="col-md-3 col-sm-4">
                   <div class="pad box-pane-right bg-green" style="min-height: 280px">
-                    <div class="description-block margin-bottom">
+                    <div class="description-block">
                       <div class="sparkbar pad" data-color="#fff">90,70,90,70,75,80,70</div>
                       <h5 class="description-header">8390</h5>
                       <span class="description-text">Visits</span>
@@ -464,7 +464,7 @@
           <!-- TABLE: LATEST ORDERS -->
           <div class="box box-info">
             <div class="box-header with-border">
-              <h3 class="box-title">Latest Orders</h3>
+              <h3 class="box-title">Whatever!!!!!</h3>
 
               <div class="box-tools pull-right">
                 <button type="button" class="btn btn-box-tool" data-widget="collapse"><i class="fa fa-minus"></i>
