--- a/Ourapp/app/base/templates/site_template/navigation.html
+++ b/Ourapp/app/base/templates/site_template/navigation.html
@@ -3,7 +3,7 @@
     <!-- Logo -->
     <a href="index2.html" class="logo">
       <!-- mini logo for sidebar mini 50x50 pixels -->
-      <span class="logo-mini"><b>A</b>LT</span>
+      <span class="logo-mini"><b>BI</span>
       <!-- logo for regular state and mobile devices -->
       <span class="logo-lg"><b>BulliesEye</b></span>
     </a>
