--- a/Ourapp/app/base/templates/site_template/sidebar.html
+++ b/Ourapp/app/base/templates/site_template/sidebar.html
@@ -17,15 +17,7 @@
         </div>
       </div>
       <!-- search form -->
-      <form action="#" method="get" class="sidebar-form">
-        <div class="input-group">
-          <input type="text" name="q" class="form-control" placeholder="Search...">
-          <span class="input-group-btn">
-                <button type="submit" name="search" id="search-btn" class="btn btn-flat"><i class="fa fa-search"></i>
-                </button>
-              </span>
-        </div>
-      </form>
+
       <!-- /.search form -->
       
       <!-- sidebar menu: : style can be found in sidebar.less -->
@@ -193,7 +185,9 @@
           </ul>
         </li> -->
         <!-- <li><a href="https://appseed.us/admin-dashboards/flask-dashboard-adminlte"><i class="fa fa-rocket"></i> <span>Product Info</span></a></li> -->
-        <li class="header"></li>
+        <li><a href="/search"><i class="fa fa-search text-green"></i> <span>Search</span></a></li>
+
+        <!-- <li class="header"></li> -->
         <li><a href="/logout"><i class="fa fa-circle-o text-red"></i> <span>Logout</span></a></li>
       </ul>
     </section>
