--- a/Ourapp/app/home/templates/index2.html
+++ b/Ourapp/app/home/templates/index2.html
@@ -3,19 +3,70 @@
 {% block title %} Dashboard v2 {% endblock title %}
 
 {% block content %}
+    <style>
+    .switch {
+  position: relative;
+  display: inline-block;
+  width: 60px;
+  height: 34px;
+}
 
+/* Hide default HTML checkbox */
+.switch input {
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+
+/* The slider */
+.slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #ccc;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+.slider:before {
+  position: absolute;
+  content: "";
+  height: 26px;
+  width: 26px;
+  left: 4px;
+  bottom: 4px;
+  background-color: white;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+input:checked + .slider {
+  background-color: #2196F3;
+}
+
+input:focus + .slider {
+  box-shadow: 0 0 1px #2196F3;
+}
+
+input:checked + .slider:before {
+  -webkit-transform: translateX(26px);
+  -ms-transform: translateX(26px);
+  transform: translateX(26px);
+}
+
+/* Rounded sliders */
+.slider.round {
+  border-radius: 34px;
+}
+
+.slider.round:before {
+  border-radius: 50%;
+}
+    </style>
     <!-- Content Header (Page header) -->
-    <section class="content-header">
-      <h1>
-        Dashboard
-        <small>Version 2.0</small>
-      </h1>
-      <ol class="breadcrumb">
-        <li><a href="#"><i class="fa fa-dashboard"></i> Home</a></li>
-        <li class="active">Dashboard</li>
-      </ol>
-    </section>
-
     <!-- Main content -->
     <section class="content">
       <!-- Info boxes -->
@@ -23,7 +74,7 @@
         <div class="col-md-3 col-sm-6 col-xs-12">
           <div class="info-box">
             <!-- <span class="info-box-icon bg-aqua"><i class="ion ion-ios-gear-outline"></i></span> -->
-            <span class="info-box-icon bg-aqua"><i class="ion-ios-chatbubble-outline"></i></span>
+            <span class="info-box-icon bg-aqua"><i class="ion-alert"></i></span>
             <div class="info-box-content">
               <span class="info-box-text">Misclassified messages</span>
               <span class="info-box-number">5200</span>
@@ -35,7 +86,7 @@
         <!-- /.col -->
         <div class="col-md-3 col-sm-6 col-xs-12">
           <div class="info-box">
-            <span class="info-box-icon bg-red"><i class="fa fa-google-plus"></i></span>
+              <span class="info-box-icon bg-red"><i class="ion ion-ios-people-outline"></i></span>
 
             <div class="info-box-content">
               <span class="info-box-text">Participants</span>
@@ -52,7 +103,7 @@
 
         <div class="col-md-3 col-sm-6 col-xs-12">
           <div class="info-box">
-            <span class="info-box-icon bg-green"><i class="ion ion-ios-cart-outline"></i></span>
+            <span class="info-box-icon bg-green"><i class="ion-ios-email-outline"></i></span>
 
             <div class="info-box-content">
               <span class="info-box-text">Messages</span>
@@ -65,7 +116,7 @@
         <!-- /.col -->
         <div class="col-md-3 col-sm-6 col-xs-12">
           <div class="info-box">
-            <span class="info-box-icon bg-yellow"><i class="ion ion-ios-people-outline"></i></span>
+            <span class="info-box-icon bg-yellow"><i class="ion-eye-disabled"></i></span>
 
             <div class="info-box-content">
               <span class="info-box-text">Bullying Incidents</span>
@@ -83,7 +134,8 @@
         <div class="col-md-12">
           <div class="box">
             <div class="box-header with-border">
-              <h3 class="box-title">Monthly Recap Report</h3>
+              <h3 class="box-title" id='monthly'>Monthly Recap Report</h3>
+              <h3 class="box-title" id='weekly' style='display: none'>Weekly Recap Report</h3>
 
               <div class="box-tools pull-right">
                 <button type="button" class="btn btn-box-tool" data-widget="collapse"><i class="fa fa-minus"></i>
@@ -95,7 +147,7 @@
             <!-- /.box-header -->
             <div class="box-body">
               <div class="row">
-                <div class="col-md-8">
+                <div class="col-md-11">
                   <p class="text-center">
                     <strong>Sales: 1 Jan, 2014 - 30 Jul, 2014</strong>
                   </p>
@@ -103,9 +155,17 @@
                   <div class="chart">
                     <!-- Sales Chart Canvas -->
                     <canvas id="salesChart" style="height: 180px;"></canvas>
+                    <canvas id="salesChartWeekly" style="height: 180px; display: none;"></canvas>
                   </div>
                   
                   <!-- /.chart-responsive -->
+                </div>
+                <div class='col-md-1' style='vertical-align: middle'>
+                    <label class="switch" style='margin-top:80px;'>
+                        <input type="checkbox" onclick="swapView()"  >
+                        <span class="slider round"></span>
+                      </label>
+                  </button>
                 </div>
                 <!-- /.col -->
 
