--- a/Ourapp/app/home/templates/index2.html
+++ b/Ourapp/app/home/templates/index2.html
@@ -208,8 +208,12 @@ input:checked + .slider:before {
                         <button type="button" class="btn btn-box-tool" data-widget="remove"><i class="fa fa-times"></i></button>
                       </div>
                   <h3 class="box-title">Non bullying</h3>
+                </div>
+              <div class="box-body">
+                <div class="row">
                   <canvas id="nonBully" width="600" height="400"></canvas>
                 </div>
+              </div>
               </div>
             </div>
       </div>
