Added search feature

--- a/Ourapp/app/base/templates/base_site.html
+++ b/Ourapp/app/base/templates/base_site.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <link rel='icon' href='/static/favicon.ico' type='image/x-icon'/ >
 
-  <title>Flask AdminLTE - {% block title %} {% endblock %} | AppSeed</title>
+  <title>BulliesEye - {% block title %} {% endblock %} | AppSeed</title>
 
   <!-- Tell the browser to be responsive to screen width -->
   <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
