--- a/Ourapp/app/base/templates/site_template/navigation.html
+++ b/Ourapp/app/base/templates/site_template/navigation.html
@@ -1,7 +1,7 @@
 
   <header class="main-header">
     <!-- Logo -->
-    <a href="index2.html" class="logo">
+    <a href="/index" class="logo">
       <!-- mini logo for sidebar mini 50x50 pixels -->
       <span class="logo-mini"><b>BI</span>
       <!-- logo for regular state and mobile devices -->
