--- a/Ourapp/app/base/templates/site_template/sidebar.html
+++ b/Ourapp/app/base/templates/site_template/sidebar.html
@@ -19,7 +19,7 @@
       <!-- search form -->
 
       <!-- /.search form -->
-      
+
       <!-- sidebar menu: : style can be found in sidebar.less -->
       <ul class="sidebar-menu" data-widget="tree">
         <!-- <li class="header">MAIN NAVIGATION</li>
@@ -185,8 +185,8 @@
           </ul>
         </li> -->
         <!-- <li><a href="https://appseed.us/admin-dashboards/flask-dashboard-adminlte"><i class="fa fa-rocket"></i> <span>Product Info</span></a></li> -->
+        <li><a href="/index"><i class="fa fa-bars text-green"></i> <span>Dashboard</span></a></li>
         <li><a href="/search"><i class="fa fa-search text-green"></i> <span>Search</span></a></li>
-        <li><a href="/index"><i class="fa fa-search text-green"></i> <span>Dashboard</span></a></li>
         <!-- <li class="header"></li> -->
         <li><a href="/logout"><i class="fa fa-circle-o text-red"></i> <span>Logout</span></a></li>
       </ul>
