--- a/Ourapp/app/home/templates/index2.html
+++ b/Ourapp/app/home/templates/index2.html
@@ -228,7 +228,8 @@ input:checked + .slider:before {
           </div>
           <div class="box box-success">
             <div class="box-header with-border">
-              
+                <h3 class="box-title" id='lmonth'>Cases of bullying around the world</h3>
+
               <div class="box-tools pull-right">
                 <button type="button" class="btn btn-box-tool" data-widget="collapse"><i class="fa fa-minus"></i>
                 </button>
